# wilde-rosen-carsharing

./: .dockerignore  .env.example  .firebaserc  .gitignore  .prettierrc  ADMIN_SDK_SETUP.md  Dockerfile  README.md  TECHNICAL_OVERVIEW.md  app.config.ts  app.vue  apphosting.prd.yaml  apphosting.yaml  deploy.sh  eslint.config.mjs  firebase.json  firestore.indexes.json  firestore.rules  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  useBootstrap.client.ts
app/: app.config.ts  app.vue
assets/: main.scss
components/: Alert.vue  CarDamageImage.vue  CarDamageViewer.vue  CarLogViewer.vue  CarPageNavigation.vue  CarViewer.vue  CloudImageSelector.vue  DamageDetailsForm.vue  DamageEntryForm.vue  DamageImageUpload.vue  DamageSideSelector.vue  DefaultPageStructure.vue  FirebaseNuxtImg.vue  HalfWidth.vue  ImageModal.vue  LogViewer.vue  UserLogViewer.vue  UserMenu.vue
composables/: states.ts  useCarDamages.ts  useImageHandling.ts  useImageOptimization.ts  useImageZoomPan.ts  useLogData.ts  useTypes.ts  useUserData.ts
docs/: guide-damage-reporters.md  guide-guests.md  guide-members.md  index.md
layouts/: default.vue
middleware/: auth.global.ts  auth.ts  developer.ts
scripts/python_helper_scripts/: .gitignore  README.md  account_manager.py  copy_cars_prd_to_npr.ipynb  env.py.template  firebase_copy_doc.ipynb  firebase_update_doc.ipynb  firebase_util.py  firebase_validate_doc.ipynb  fix_image_paths.py  get_calendar_members.ipynb  manage_accounts.ipynb  pyproject.toml  qr_code_generator.ipynb  run_fix_image_paths.ipynb  run_fix_image_paths.py
(+105 files in other folders)
