[project]
name = "gcp-helper-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-firestore>=2.21.0",
    "google-cloud-storage>=3.4.0",
    "ipykernel>=6.30.0",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
]
