[project]
name = "gcp-helper-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.9.0",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.49.1",
    "google-cloud-firestore>=2.21.0",
    "google-cloud-storage>=3.4.0",
    "ipykernel>=6.30.0",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "qrcode[pil]>=8.2",
]
